--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,12 +22,16 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rec_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="@dimen/main_recycler_margin_top"
-        android:layout_marginHorizontal="@dimen/general_horizontal"/>
+        android:layout_marginHorizontal="@dimen/general_horizontal"
+        android:paddingBottom="@dimen/main_recycler_padding_bottom"
+        android:overScrollMode="never"
+        android:clipToPadding="false"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
