--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
+        android:text="@string/main_title"
         android:textSize="@dimen/main_title_font_size"
         app:layout_constraintBottom_toTopOf="@id/rec_view"
         app:layout_constraintEnd_toEndOf="parent"
